Renewed UnderConstruction page style, fixed block callers image cropping

--- a/usingEnyo/source/styles/CallFlow.less
+++ b/usingEnyo/source/styles/CallFlow.less
@@ -81,7 +81,6 @@
     font-size: @rc-font-size-bigger;
     font-weight: bold;
     margin: 0 10px 0 0;
-//    overflow: hidden;
     & > * {
         display: inline-block;
     }
@@ -112,10 +111,10 @@
 }
 
 .ui-call-flow-block-callers {
-    background: transparent url(@rc-images-block-callers) top center no-repeat;
-    background-size: auto 100%;
-    width: 45px;
-    height: 45px;
+    background: transparent url(@rc-images-block-callers) center center no-repeat;
+    background-size: 100% auto;
+    width: 48px;
+    height: 48px;
     margin: -10px 0 0 0;
     padding: 0;
     .inactive & {
