--- a/usingEnyo/source/styles/UnderConstruction.less
+++ b/usingEnyo/source/styles/UnderConstruction.less
@@ -3,22 +3,19 @@
  * March 2013
  */
 
-.ui-add-rule {
-}
-
-.ui-add-rule-top {
+.ui-under-construction-top {
     background: transparent url(@rc-images-warning-stripes) top left repeat-x;
-    background-size: auto 17px;
+    background-size: auto 100%;
     height: 17px;
 }
 
-.ui-add-rule-img {
-    background: transparent url(@rc-images-wizard-placeholder) center 40px no-repeat;
+.ui-under-construction-img {
+    background: transparent url(@rc-images-under-construction) center 40px no-repeat;
     background-size: 80% 90px;
     height: 135px;
 }
 
-.ui-add-rule-placeholder {
+.ui-under-construction-placeholder {
     font-size: @rc-font-size-bigger;
     font-weight: bold;
     text-align: center;
