--- a/usingEnyo/source/styles/variables.less
+++ b/usingEnyo/source/styles/variables.less
@@ -68,9 +68,9 @@
 @rc-images-voicemail: '@{rc-images-path}cartoon_voicemail_on.svg';
 @rc-images-voicemail-off: '@{rc-images-path}cartoon_voicemail_off.svg';
 @rc-images-notifications: '@{rc-images-path}cartoon_notifications_on.svg';
-@rc-images-restricted-area: '@{rc-images-path}area51_sign.jpg';
-@rc-images-warning-stripes: '@{rc-images-path}placeholder_top_bar.svg';
+@rc-images-warning-stripes: '@{rc-images-path}placeholder_top_bar.png';
 @rc-images-wizard-placeholder: '@{rc-images-path}placeholder_wizard.svg';
+@rc-images-under-construction: '@{rc-images-path}cartoon_block-under_construction.svg';
 
 @rc-images-phone-mobile: '@{rc-images-path}phone_mobile_on.svg';
 @rc-images-phone-mobile-off: '@{rc-images-path}phone_mobile_off.svg';
